fix horizontal text overflow in toc sections & force wrapping
- fixes #204

--- a/sass/_component_toc.scss
+++ b/sass/_component_toc.scss
@@ -92,6 +92,8 @@
   color: $gray-700;
   max-height: 100vh;
   overflow-y: auto;
+  overflow-x: hidden;
+  word-break: break-all;
 
   a {
     color: $gray-600;
